예제 기반으로 api데이터 받아오기 구현중...(3) 1. 노선 전체 목록 받아오기 구현  - 정류장 목록들이 null로 받아지는 현상 해결 필요.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WaitHater">
+        android:theme="@style/Theme.WaitHater"
+        android:usesCleartextTraffic="true">
         <activity android:name="com.mally.ch02.waitHater.ui.notifications.SetAlarmActivity"></activity>
         <activity android:name="com.mally.ch02.waitHater.ui.notifications.BusChoiceActivity" />
         <activity android:name="com.mally.ch02.waitHater.ui.notifications.BusStopChoiceActivity" />
